Got rid of Java 9 nonsense - back on Java 8!